--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
   <script src="firebase-init.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script src="auth.js"></script>
 </head>
 <body class="bg-gray-100 font-sans">
   <div class="container mx-auto p-4">
