--- a/banco.html
+++ b/banco.html
@@ -20,6 +20,7 @@
   </style>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.10.0/firebase-firestore.js"></script>
+  <script src="auth.js"></script>
 </head>
 <body>
   <div class="container">
