--- a/justificativas.html
+++ b/justificativas.html
@@ -8,6 +8,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script src="auth.js"></script>
 </head>
 <body class="bg-gray-100 font-sans">
   <div class="max-w-4xl mx-auto p-4">
