--- a/cadastro.html
+++ b/cadastro.html
@@ -29,6 +29,7 @@
     const auth = firebase.auth();
     const db = firebase.firestore();
   </script>
+  <script src="auth.js"></script>
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
   <div class="w-full max-w-lg bg-white p-6 rounded-2xl shadow-xl">
