--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       return "extra";
     }
   </script>
+  <script src="auth.js"></script>
 </head>
 <body class="bg-gray-50 p-6">
   <div class="max-w-md mx-auto bg-white p-6 rounded-xl shadow space-y-4">
