--- a/justificativas.html
+++ b/justificativas.html
@@ -15,6 +15,10 @@
     <h1 class="text-2xl font-bold mb-4 text-center">📋 Responder Justificativas</h1>
     <div id="justificativas-container" class="space-y-4"></div>
   </div>
+  <button onclick="exportTableToCSV('tabelaPontos', 'pontos.csv')" class="btn-exportar">
+  Exportar para CSV
+  </button>
+
 
   <script>
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
@@ -66,5 +70,6 @@
 
     window.onload = carregarJustificativas;
   </script>
+  <script src="exportCSV.js"></script>
 </body>
 </html>
