--- a/justificativas.html
+++ b/justificativas.html
@@ -3,32 +3,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Responder Justificativas</title>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <script src="auth.js"></script>
+  <title>Justificativas de Falta</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f8fafc;
+      margin: 0;
+      padding: 1rem;
+    }
+    .container {
+      max-width: 960px;
+      margin: auto;
+      background: white;
+      border-radius: 12px;
+      padding: 2rem;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+    }
+    h1 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      color: #1e293b;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+    }
+    th, td {
+      text-align: left;
+      padding: 0.75rem;
+      border-bottom: 1px solid #e2e8f0;
+    }
+    th {
+      background-color: #00AEEF;
+      color: white;
+    }
+    a {
+      color: #00AEEF;
+      text-decoration: none;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 font-sans">
-  <div class="max-w-4xl mx-auto p-4">
-    <h1 class="text-2xl font-bold mb-4 text-center">📋 Responder Justificativas</h1>
-    <div id="justificativas-container" class="space-y-4"></div>
+<body>
+  <div class="container">
+    <h1>Justificativas de Falta</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Funcionário</th>
+          <th>Data</th>
+          <th>Motivo</th>
+          <th>Anexo</th>
+        </tr>
+      </thead>
+      <tbody id="justificativasBody">
+        <!-- As justificativas serão carregadas aqui via Firebase -->
+      </tbody>
+    </table>
   </div>
-  <button onclick="exportTableToCSV('tabelaPontos', 'pontos.csv')" class="btn-exportar">
-  Exportar para CSV
-  </button>
 
-
-  <script>
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-    import { getFirestore, collection, getDocs, updateDoc, doc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
+  <!-- Firebase App -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "SUA_API_KEY",
       authDomain: "SEU_AUTH_DOMAIN",
       projectId: "SEU_PROJECT_ID",
-      storageBucket: "SEU_STORAGE_BUCKET",
+      storageBucket: "SEU_BUCKET",
       messagingSenderId: "SEU_SENDER_ID",
       appId: "SEU_APP_ID"
     };
@@ -38,38 +82,25 @@
 
     async function carregarJustificativas() {
       const querySnapshot = await getDocs(collection(db, "justificativas"));
-      const container = document.getElementById("justificativas-container");
+      const tbody = document.getElementById("justificativasBody");
+      tbody.innerHTML = "";
 
-      querySnapshot.forEach((docSnap) => {
-        const data = docSnap.data();
-        if (data.status === "pendente") {
-          const card = document.createElement("div");
-          card.className = "bg-white rounded shadow p-4";
-          card.innerHTML = `
-            <p><strong>Funcionário:</strong> ${data.nome}</p>
-            <p><strong>Motivo:</strong> ${data.motivo}</p>
-            <p><strong>Data:</strong> ${data.data}</p>
-            <p><strong>Arquivo:</strong> <a href="${data.arquivoURL}" target="_blank" class="text-blue-600 underline">Ver Atestado</a></p>
-            <div class="mt-2 space-x-2">
-              <button onclick="responder('${docSnap.id}', 'aprovada')" class="bg-green-500 text-white px-4 py-1 rounded">Aprovar</button>
-              <button onclick="responder('${docSnap.id}', 'recusada')" class="bg-red-500 text-white px-4 py-1 rounded">Recusar</button>
-            </div>
-          `;
-          container.appendChild(card);
-        }
+      querySnapshot.forEach((doc) => {
+        const data = doc.data();
+        const row = document.createElement("tr");
+
+        row.innerHTML = `
+          <td>${data.nome}</td>
+          <td>${data.data}</td>
+          <td>${data.motivo}</td>
+          <td>${data.anexo ? `<a href="${data.anexo}" target="_blank">Ver Arquivo</a>` : 'Sem anexo'}</td>
+        `;
+
+        tbody.appendChild(row);
       });
     }
 
-    async function responder(id, status) {
-      await updateDoc(doc(db, "justificativas", id), {
-        status: status
-      });
-      alert(`Justificativa ${status}`);
-      location.reload();
-    }
-
-    window.onload = carregarJustificativas;
+    carregarJustificativas();
   </script>
-  <script src="exportCSV.js"></script>
 </body>
 </html>
