--- a/cadastro.html
+++ b/cadastro.html
@@ -95,5 +95,50 @@
       }
     });
   </script>
+  <script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+  import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js";
+  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+
+  const firebaseConfig = {
+    apiKey: "SUA_API_KEY",
+    authDomain: "SEU_DOMINIO.firebaseapp.com",
+    projectId: "SEU_PROJECT_ID",
+    storageBucket: "SEU_BUCKET",
+    messagingSenderId: "SENDER_ID",
+    appId: "SEU_APP_ID"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
+
+  document.getElementById("cadastroForm").addEventListener("submit", async (e) => {
+    e.preventDefault();
+    
+    const nome = document.getElementById("nome").value;
+    const setor = document.getElementById("setor").value;
+    const email = document.getElementById("email").value;
+    const senha = document.getElementById("senha").value;
+
+    try {
+      const userCredential = await createUserWithEmailAndPassword(auth, email, senha);
+      const user = userCredential.user;
+
+      await addDoc(collection(db, "usuarios"), {
+        uid: user.uid,
+        nome: nome,
+        setor: setor,
+        email: email
+      });
+
+      alert("Funcionário cadastrado com sucesso!");
+      window.location.href = "login.html";
+    } catch (error) {
+      console.error("Erro ao cadastrar funcionário:", error);
+      alert("Erro ao cadastrar funcionário: " + error.message);
+    }
+  });
+</script>
 </body>
 </html>
