--- a/login.html
+++ b/login.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Sistema de Ponto</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - Papelprint</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Poppins', sans-serif;
     }
   </style>
-  <!-- Firebase -->
+
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
@@ -30,18 +31,18 @@
     const db = firebase.firestore();
   </script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-  <div class="w-full max-w-sm bg-white p-6 rounded-2xl shadow-lg">
-    <h1 class="text-2xl font-semibold text-center text-gray-800 mb-6">Login do Funcionário</h1>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
+  <div class="w-full max-w-md bg-white p-6 rounded-2xl shadow-xl">
+    <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">Acesso ao Sistema</h1>
 
-    <form id="loginForm" class="space-y-4">
+    <form id="formLogin" class="space-y-4">
       <div>
-        <label for="usuario" class="block text-sm font-medium text-gray-700">E-mail</label>
-        <input type="email" id="usuario" class="w-full mt-1 p-2 border border-gray-300 rounded-lg" required />
+        <label class="block text-sm font-medium text-gray-700">E-mail</label>
+        <input type="email" id="email" class="w-full mt-1 p-2 border border-gray-300 rounded-lg" required />
       </div>
 
       <div>
-        <label for="senha" class="block text-sm font-medium text-gray-700">Senha</label>
+        <label class="block text-sm font-medium text-gray-700">Senha</label>
         <input type="password" id="senha" class="w-full mt-1 p-2 border border-gray-300 rounded-lg" required />
       </div>
 
@@ -49,38 +50,28 @@
         Entrar
       </button>
 
-      <p id="erro" class="text-red-500 text-sm text-center mt-2 hidden">Usuário ou senha inválidos.</p>
+      <p id="mensagemErro" class="hidden text-red-600 text-center mt-4">Usuário ou senha incorretos.</p>
     </form>
   </div>
 
   <script>
-    const form = document.getElementById('loginForm');
-    const erro = document.getElementById('erro');
+    const formLogin = document.getElementById('formLogin');
+    const mensagemErro = document.getElementById('mensagemErro');
 
-    form.addEventListener('submit', async e => {
+    formLogin.addEventListener('submit', async (e) => {
       e.preventDefault();
-      const email = document.getElementById('usuario').value.trim();
+
+      const email = document.getElementById('email').value.trim();
       const senha = document.getElementById('senha').value.trim();
 
       try {
-        const credenciais = await auth.signInWithEmailAndPassword(email, senha);
-        const uid = credenciais.user.uid;
+        await auth.signInWithEmailAndPassword(email, senha);
 
-        // Buscar dados adicionais no Firestore
-        const docRef = db.collection('funcionarios').doc(uid);
-        const doc = await docRef.get();
-
-        if (doc.exists) {
-          localStorage.setItem('usuarioLogado', JSON.stringify(doc.data()));
-          window.location.href = 'index.html';
-        } else {
-          erro.textContent = 'Usuário sem dados vinculados no Firestore.';
-          erro.classList.remove('hidden');
-        }
-      } catch (err) {
-        console.error(err);
-        erro.textContent = 'Usuário ou senha inválidos.';
-        erro.classList.remove('hidden');
+        // Redirecionar para a página principal (ajuste se necessário)
+        window.location.href = "index.html";
+      } catch (error) {
+        mensagemErro.classList.remove('hidden');
+        console.error("Erro ao fazer login:", error);
       }
     });
   </script>
