--- a/cadastro.html
+++ b/cadastro.html
@@ -16,12 +16,12 @@
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-compat.js"></script>
 <script>
   const firebaseConfig = {
-    apiKey: "AIzaSyCzy5KwdkK0GCzZ5o6i1lOK7WsdheSYV9g",
+    apiKey: "AIzaSyCzy5KwdKkOGCzZ5o6i1lOK7WsdheSYV9g",
     authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
     projectId: "controle-de-ponto-papelprint",
-    storageBucket: "controle-de-ponto-papelprint.appspot.com",
+    storageBucket: "controle-de-ponto-papelprint.firebasestorage.app",
     messagingSenderId: "630875968731",
-    appId: "1:630875968731:web:2dc067757a090bc16c28fe"
+    appId: "1:630875968731:web:5ee9259e69c3083b6c28fe"
   };
 
   firebase.initializeApp(firebaseConfig);
