--- a/cadastro.html
+++ b/cadastro.html
@@ -12,14 +12,14 @@
     }
   </style>
 
- <!-- Firebase compatível com firebase.auth() -->
+<!-- Firebase compatível com firebase.auth() -->
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-compat.js"></script>
 <script>
   const firebaseConfig = {
     apiKey: "AIzaSyCzy5KwdKkOGCzZ5o6i1lOK7WsdheSYV9g",
     authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
     projectId: "controle-de-ponto-papelprint",
-    storageBucket: "controle-de-ponto-papelprint.firebasestorage.app",
+    storageBucket: "controle-de-ponto-papelprint.appspot.com",
     messagingSenderId: "630875968731",
     appId: "1:630875968731:web:5ee9259e69c3083b6c28fe"
   };
@@ -28,6 +28,7 @@
   const auth = firebase.auth();
   const db = firebase.firestore();
 </script>
+
 
 
 </head>
