--- a/login.html
+++ b/login.html
@@ -12,24 +12,23 @@
     }
   </style>
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCzy5KwdkK0GCzZ5o6i1lOK7WsdheSYV9g",
-      authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
-      projectId: "controle-de-ponto-papelprint",
-      storageBucket: "controle-de-ponto-papelprint.appspot.com",
-      messagingSenderId: "630875968731",
-      appId: "1:630875968731:web:2dc067757a090bc16c28fe"
-    };
+ <!-- Firebase compatível com firebase.auth() -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-compat.js"></script>
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCzy5KwdKkOGCzZ5o6i1lOK7WsdheSYV9g",
+    authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
+    projectId: "controle-de-ponto-papelprint",
+    storageBucket: "controle-de-ponto-papelprint.appspot.com",
+    messagingSenderId: "630875968731",
+    appId: "1:630875968731:web:5ee9259e69c3083b6c28fe"
+  };
 
-    const app = firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
-  </script>
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+</script>
+
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
   <div class="w-full max-w-md bg-white p-6 rounded-2xl shadow-xl">
