--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - Papelprint</title>
+  <title>Login - Controle de Ponto</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
@@ -12,65 +12,60 @@
     }
   </style>
 
- <!-- Firebase compatível com firebase.auth() -->
-<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-compat.js"></script>
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCzy5KwdKkOGCzZ5o6i1lOK7WsdheSYV9g",
-    authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
-    projectId: "controle-de-ponto-papelprint",
-    storageBucket: "controle-de-ponto-papelprint.appspot.com",
-    messagingSenderId: "630875968731",
-    appId: "1:630875968731:web:5ee9259e69c3083b6c28fe"
-  };
+  <!-- Firebase compatível com firebase.auth() -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-compat.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCzy5KwdKkOGCzZ5o6i1lOK7WsdheSYV9g",
+      authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
+      projectId: "controle-de-ponto-papelprint",
+      storageBucket: "controle-de-ponto-papelprint.appspot.com",
+      messagingSenderId: "630875968731",
+      appId: "1:630875968731:web:5ee9259e69c3083b6c28fe"
+    };
 
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-  const db = firebase.firestore();
-</script>
-
+    firebase.initializeApp(firebaseConfig);
+  </script>
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
   <div class="w-full max-w-md bg-white p-6 rounded-2xl shadow-xl">
-    <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">Acesso ao Sistema</h1>
+    <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">Login de Funcionário</h1>
 
     <form id="formLogin" class="space-y-4">
       <div>
         <label class="block text-sm font-medium text-gray-700">E-mail</label>
-        <input type="email" id="email" class="w-full mt-1 p-2 border border-gray-300 rounded-lg" required />
+        <input type="email" id="email" required class="w-full mt-1 p-2 border border-gray-300 rounded-lg" />
       </div>
 
       <div>
         <label class="block text-sm font-medium text-gray-700">Senha</label>
-        <input type="password" id="senha" class="w-full mt-1 p-2 border border-gray-300 rounded-lg" required />
+        <input type="password" id="senha" required class="w-full mt-1 p-2 border border-gray-300 rounded-lg" />
       </div>
 
       <button type="submit" class="w-full bg-cyan-500 text-white py-2 rounded-lg font-semibold hover:bg-cyan-600">
         Entrar
       </button>
 
-      <p id="mensagemErro" class="hidden text-red-600 text-center mt-4">Usuário ou senha incorretos.</p>
+      <p id="mensagemErro" class="hidden text-red-600 text-center mt-4">Usuário ou senha inválidos.</p>
     </form>
   </div>
 
   <script>
-    const formLogin = document.getElementById('formLogin');
-    const mensagemErro = document.getElementById('mensagemErro');
+    const auth = firebase.auth();
+    const formLogin = document.getElementById("formLogin");
+    const mensagemErro = document.getElementById("mensagemErro");
 
-    formLogin.addEventListener('submit', async (e) => {
+    formLogin.addEventListener("submit", async (e) => {
       e.preventDefault();
-
-      const email = document.getElementById('email').value.trim();
-      const senha = document.getElementById('senha').value.trim();
+      const email = document.getElementById("email").value.trim();
+      const senha = document.getElementById("senha").value.trim();
 
       try {
         await auth.signInWithEmailAndPassword(email, senha);
-
-        // Redirecionar para a página principal (ajuste se necessário)
-        window.location.href = "index.html";
+        window.location.href = "index.html"; // Redireciona ao painel principal
       } catch (error) {
-        mensagemErro.classList.remove('hidden');
-        console.error("Erro ao fazer login:", error);
+        console.error(error);
+        mensagemErro.classList.remove("hidden");
       }
     });
   </script>
