--- a/index.html
+++ b/index.html
@@ -3,135 +3,132 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Registro de Ponto</title>
+  <title>Registro de Ponto - Papelprint</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Inter', sans-serif; }
+    body {
+      font-family: 'Poppins', sans-serif;
+    }
   </style>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-compat.js"></script>
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyCzy5KwdkK0GCzZ5o6i1lOK7WsdheSYV9g",
+      apiKey: "AIzaSyCzy5KwdKkOGCzZ5o6i1lOK7WsdheSYV9g",
       authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
       projectId: "controle-de-ponto-papelprint",
       storageBucket: "controle-de-ponto-papelprint.appspot.com",
       messagingSenderId: "630875968731",
-      appId: "1:630875968731:web:2dc067757a090bc16c28fe"
+      appId: "1:630875968731:web:5ee9259e69c3083b6c28fe"
     };
 
-    const app = firebase.initializeApp(firebaseConfig);
+    firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const db = firebase.firestore();
-    const storage = firebase.storage();
+  </script>
+</head>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
+  <div class="w-full max-w-xl bg-white p-6 rounded-2xl shadow-xl">
+    <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">Registro de Ponto</h1>
+    <div class="space-y-4">
+      <div class="text-center">
+        <p><strong>Usuário:</strong> <span id="nomeUsuario"></span></p>
+        <p><strong>Setor:</strong> <span id="setorUsuario"></span></p>
+        <p><strong>Horário:</strong> <span id="horaAtual"></span></p>
+      </div>
 
-    const sedeLatitude = -23.477944;
-    const sedeLongitude = -46.650889;
+      <div class="flex justify-center">
+        <button onclick="baterPonto()" class="bg-cyan-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-cyan-600">
+          Bater Ponto
+        </button>
+      </div>
+
+      <div class="text-center mt-4">
+        <p id="mensagem" class="text-sm font-medium"></p>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    let user = null;
+
+    auth.onAuthStateChanged(async (u) => {
+      if (!u) {
+        window.location.href = "login.html";
+        return;
+      }
+      user = u;
+      const doc = await db.collection("funcionarios").doc(user.uid).get();
+      const data = doc.data();
+      document.getElementById("nomeUsuario").textContent = data?.nome || "-";
+      document.getElementById("setorUsuario").textContent = data?.setor || "-";
+    });
+
+    function atualizarHora() {
+      const agora = new Date();
+      const hora = agora.toLocaleTimeString('pt-BR', { hour12: false });
+      document.getElementById('horaAtual').textContent = hora;
+    }
+    setInterval(atualizarHora, 1000);
+    atualizarHora();
 
     function calcularDistanciaEmMetros(lat1, lon1, lat2, lon2) {
-      const R = 6371000;
+      const R = 6371e3;
       const rad = Math.PI / 180;
       const dLat = (lat2 - lat1) * rad;
       const dLon = (lon2 - lon1) * rad;
-      const a = Math.sin(dLat / 2) ** 2 +
-                Math.cos(lat1 * rad) * Math.cos(lat2 * rad) *
-                Math.sin(dLon / 2) ** 2;
+      const a = Math.sin(dLat / 2) ** 2 + Math.cos(lat1 * rad) * Math.cos(lat2 * rad) * Math.sin(dLon / 2) ** 2;
       const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
       return R * c;
     }
 
     function classificarBatida(horaAtual) {
-      const hora = horaAtual.getHours();
-      const minutos = horaAtual.getMinutes();
-      const totalMinutos = hora * 60 + minutos;
-
-      if (totalMinutos >= 420 && totalMinutos <= 540) return "entrada"; // 7h às 9h
-      if (totalMinutos >= 720 && totalMinutos <= 780) return "saida_almoco"; // 12h às 13h
-      if (totalMinutos >= 780 && totalMinutos <= 900) return "retorno_almoco"; // 13h às 15h
-      if (totalMinutos >= 1020 && totalMinutos <= 1080) return "saida"; // 17h às 18h
+      const [h, m] = horaAtual.split(":").map(Number);
+      const totalMin = h * 60 + m;
+      if (totalMin >= 300 && totalMin < 480) return "entrada"; // 5:00 - 8:00
+      if (totalMin >= 720 && totalMin < 840) return "saida_almoco"; // 12:00 - 14:00
+      if (totalMin >= 780 && totalMin < 960) return "retorno_almoco"; // 13:00 - 16:00
+      if (totalMin >= 960 && totalMin < 1140) return "saida"; // 16:00 - 19:00
       return "extra";
     }
-  </script>
-  <script src="auth.js"></script>
-</head>
-<body class="bg-gray-50 p-6">
-  <div class="max-w-md mx-auto bg-white p-6 rounded-xl shadow space-y-4">
-    <h1 class="text-xl font-semibold text-gray-800">Registrar Ponto</h1>
-    <video id="video" autoplay playsinline class="rounded w-full"></video>
-    <button onclick="baterPonto()" class="bg-blue-500 text-white w-full py-2 rounded">Bater Ponto</button>
-    <canvas id="canvas" style="display:none;"></canvas>
-    <button onclick="logout()" class="text-sm text-red-500 mt-2">Sair</button>
-  </div>
-
-  <script>
-    let currentUser = null;
-
-    auth.onAuthStateChanged(async user => {
-      if (!user) return window.location.href = 'login.html';
-      currentUser = user;
-    });
 
     async function baterPonto() {
-      if (!navigator.geolocation) return alert("Geolocalização não suportada neste dispositivo.");
+      if (!navigator.geolocation) {
+        alert("Geolocalização não suportada.");
+        return;
+      }
 
-      navigator.geolocation.getCurrentPosition(async pos => {
-        const { latitude, longitude } = pos.coords;
-        const distancia = calcularDistanciaEmMetros(latitude, longitude, sedeLatitude, sedeLongitude);
+      navigator.geolocation.getCurrentPosition(async (position) => {
+        const latitude = position.coords.latitude;
+        const longitude = position.coords.longitude;
+        const hora = new Date().toLocaleTimeString('pt-BR', { hour12: false });
+        const data = new Date().toLocaleDateString('pt-BR');
+        const classificacao = classificarBatida(hora);
 
-        if (distancia > 30) {
-          return alert(`Fora do raio permitido. Distância atual: ${distancia.toFixed(2)} metros.`);
-        }
+        const distancia = calcularDistanciaEmMetros(latitude, longitude, -23.597776, -46.64343);
+        const localizacaoOk = distancia <= 200;
 
-        const horaAtual = new Date();
-        const tipo = classificarBatida(horaAtual);
-
-        const video = document.getElementById('video');
-        const canvas = document.getElementById('canvas');
-        const context = canvas.getContext('2d');
-        canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
-        context.drawImage(video, 0, 0);
-
-        const blob = await new Promise(resolve => canvas.toBlob(resolve, 'image/jpeg'));
-        const storageRef = storage.ref().child(`selfies/${currentUser.uid}/${Date.now()}.jpg`);
-        const snapshot = await storageRef.put(blob);
-        const imageUrl = await snapshot.ref.getDownloadURL();
-
-        const doc = await db.collection('funcionarios').doc(currentUser.uid).get();
-        const nome = doc.exists ? doc.data().nome : 'Funcionário';
-
-        await db.collection('pontos').add({
-          uid: currentUser.uid,
-          nome: nome,
-          tipo: tipo,
-          horario: horaAtual.toISOString(),
-          imagem: imageUrl,
+        const registro = {
+          uid: user.uid,
+          nome: document.getElementById("nomeUsuario").textContent,
+          setor: document.getElementById("setorUsuario").textContent,
+          horario: hora,
+          data,
+          classificacao,
           latitude,
-          longitude
-        });
+          longitude,
+          localizacaoOk
+        };
 
-        alert(`Ponto registrado como "${tipo}" com sucesso!`);
+        await db.collection("registros").add(registro);
 
-      }, err => {
-        alert("Erro ao obter localização. Verifique as permissões.");
+        document.getElementById("mensagem").textContent = `Ponto registrado como "${classificacao.toUpperCase()}" às ${hora}`;
+        document.getElementById("mensagem").className = "text-green-600 font-semibold";
+
+      }, (error) => {
+        alert("Erro ao obter localização: " + error.message);
       });
     }
-
-    async function initCamera() {
-      const video = document.getElementById('video');
-      const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-      video.srcObject = stream;
-    }
-
-    function logout() {
-      auth.signOut();
-      window.location.href = 'login.html';
-    }
-
-    initCamera();
   </script>
 </body>
 </html>
