--- a/justificativas.html
+++ b/justificativas.html
@@ -3,104 +3,169 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Justificativas de Falta</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <title>Registro de Ponto - Papelprint</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background-color: #f8fafc;
-      margin: 0;
-      padding: 1rem;
-    }
-    .container {
-      max-width: 960px;
-      margin: auto;
-      background: white;
-      border-radius: 12px;
-      padding: 2rem;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-    }
-    h1 {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
-      color: #1e293b;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 1rem;
-    }
-    th, td {
-      text-align: left;
-      padding: 0.75rem;
-      border-bottom: 1px solid #e2e8f0;
-    }
-    th {
-      background-color: #00AEEF;
-      color: white;
-    }
-    a {
-      color: #00AEEF;
-      text-decoration: none;
     }
   </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Justificativas de Falta</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>Funcionário</th>
-          <th>Data</th>
-          <th>Motivo</th>
-          <th>Anexo</th>
-        </tr>
-      </thead>
-      <tbody id="justificativasBody">
-        <!-- As justificativas serão carregadas aqui via Firebase -->
-      </tbody>
-    </table>
-  </div>
-
-  <!-- Firebase App -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
-
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-compat.js"></script>
+  <script>
     const firebaseConfig = {
-      apiKey: "SUA_API_KEY",
-      authDomain: "SEU_AUTH_DOMAIN",
-      projectId: "SEU_PROJECT_ID",
-      storageBucket: "SEU_BUCKET",
-      messagingSenderId: "SEU_SENDER_ID",
-      appId: "SEU_APP_ID"
+      apiKey: "AIzaSyCzy5KwdKkOGCzZ5o6i1lOK7WsdheSYV9g",
+      authDomain: "controle-de-ponto-papelprint.firebaseapp.com",
+      projectId: "controle-de-ponto-papelprint",
+      storageBucket: "controle-de-ponto-papelprint.appspot.com",
+      messagingSenderId: "630875968731",
+      appId: "1:630875968731:web:5ee9259e69c3083b6c28fe"
     };
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+  </script>
+</head>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
+  <div class="w-full max-w-xl bg-white p-6 rounded-2xl shadow-xl">
+    <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">Registro de Ponto</h1>
+    <div class="space-y-4">
+      <div class="text-center">
+        <p><strong>Usuário:</strong> <span id="nomeUsuario"></span></p>
+        <p><strong>Setor:</strong> <span id="setorUsuario"></span></p>
+        <p><strong>Horário:</strong> <span id="horaAtual"></span></p>
+      </div>
 
-    async function carregarJustificativas() {
-      const querySnapshot = await getDocs(collection(db, "justificativas"));
-      const tbody = document.getElementById("justificativasBody");
-      tbody.innerHTML = "";
+      <div class="flex justify-center">
+        <button onclick="baterPonto()" class="bg-cyan-500 text-white px-4 py-2 rounded-lg font-semibold hover:bg-cyan-600">
+          Bater Ponto
+        </button>
+      </div>
 
-      querySnapshot.forEach((doc) => {
-        const data = doc.data();
-        const row = document.createElement("tr");
+      <div class="text-center">
+        <video id="video" autoplay class="mx-auto w-32 h-32 rounded-full border"></video>
+        <canvas id="canvas" class="hidden"></canvas>
+        <button onclick="capturarSelfie()" class="mt-2 bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">Capturar Selfie</button>
+      </div>
 
-        row.innerHTML = `
-          <td>${data.nome}</td>
-          <td>${data.data}</td>
-          <td>${data.motivo}</td>
-          <td>${data.anexo ? `<a href="${data.anexo}" target="_blank">Ver Arquivo</a>` : 'Sem anexo'}</td>
-        `;
+      <div class="text-center mt-4">
+        <p id="mensagem" class="text-sm font-medium"></p>
+      </div>
+    </div>
+  </div>
 
-        tbody.appendChild(row);
+  <script>
+    let user = null;
+    let imagemBase64 = "";
+
+    auth.onAuthStateChanged(async (u) => {
+      if (!u) {
+        window.location.href = "login.html";
+        return;
+      }
+      user = u;
+      const doc = await db.collection("funcionarios").doc(user.uid).get();
+      const data = doc.data();
+      document.getElementById("nomeUsuario").textContent = data?.nome || "-";
+      document.getElementById("setorUsuario").textContent = data?.setor || "-";
+    });
+
+    function atualizarHora() {
+      const agora = new Date();
+      const hora = agora.toLocaleTimeString('pt-BR', { hour12: false });
+      document.getElementById('horaAtual').textContent = hora;
+    }
+    setInterval(atualizarHora, 1000);
+    atualizarHora();
+
+    function calcularDistanciaEmMetros(lat1, lon1, lat2, lon2) {
+      const R = 6371e3;
+      const rad = Math.PI / 180;
+      const dLat = (lat2 - lat1) * rad;
+      const dLon = (lon2 - lon1) * rad;
+      const a = Math.sin(dLat / 2) ** 2 + Math.cos(lat1 * rad) * Math.cos(lat2 * rad) * Math.sin(dLon / 2) ** 2;
+      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+      return R * c;
+    }
+
+    function classificarBatida(horaAtual) {
+      const [h, m] = horaAtual.split(":").map(Number);
+      const totalMin = h * 60 + m;
+      if (totalMin >= 300 && totalMin < 480) return "entrada";
+      if (totalMin >= 720 && totalMin < 840) return "saida_almoco";
+      if (totalMin >= 780 && totalMin < 960) return "retorno_almoco";
+      if (totalMin >= 960 && totalMin < 1140) return "saida";
+      return "extra";
+    }
+
+    async function baterPonto() {
+      if (!imagemBase64) {
+        alert("Por favor, capture a selfie antes de bater o ponto.");
+        return;
+      }
+
+      if (!navigator.geolocation) {
+        alert("Geolocalização não suportada.");
+        return;
+      }
+
+      navigator.geolocation.getCurrentPosition(async (position) => {
+        const latitude = position.coords.latitude;
+        const longitude = position.coords.longitude;
+        const hora = new Date().toLocaleTimeString('pt-BR', { hour12: false });
+        const data = new Date().toLocaleDateString('pt-BR');
+        const classificacao = classificarBatida(hora);
+
+        const distancia = calcularDistanciaEmMetros(latitude, longitude, -23.597776, -46.64343);
+        const localizacaoOk = distancia <= 200;
+
+        const registro = {
+          uid: user.uid,
+          nome: document.getElementById("nomeUsuario").textContent,
+          setor: document.getElementById("setorUsuario").textContent,
+          horario: hora,
+          data,
+          classificacao,
+          latitude,
+          longitude,
+          localizacaoOk,
+          foto: imagemBase64
+        };
+
+        await db.collection("registros").add(registro);
+
+        document.getElementById("mensagem").textContent = `Ponto registrado como "${classificacao.toUpperCase()}" às ${hora}`;
+        document.getElementById("mensagem").className = "text-green-600 font-semibold";
+
+        imagemBase64 = "";
+      }, (error) => {
+        alert("Erro ao obter localização: " + error.message);
       });
     }
 
-    carregarJustificativas();
+    function capturarSelfie() {
+      const video = document.getElementById('video');
+      const canvas = document.getElementById('canvas');
+      const context = canvas.getContext('2d');
+
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      context.drawImage(video, 0, 0, canvas.width, canvas.height);
+      imagemBase64 = canvas.toDataURL('image/jpeg');
+      alert("Selfie capturada com sucesso!");
+    }
+
+    // Iniciar webcam automaticamente
+    navigator.mediaDevices.getUserMedia({ video: true })
+      .then(stream => {
+        const video = document.getElementById('video');
+        video.srcObject = stream;
+      })
+      .catch(err => {
+        console.error("Erro ao acessar a webcam: ", err);
+        alert("Erro ao acessar a câmera.");
+      });
   </script>
 </body>
 </html>
